# UGRP2022

./: README.md
01_bruteforce/: Makefile  bf_xdelta3_all.cpp
02_baseline/: Makefile  lsh.h  lsh_inf_comp.cpp  random_inf_comp.cpp  recent_inf_comp.cpp  sota_inf_comp.cpp
03_clustering/: Makefile  coarse_xdelta3.cpp  fine_xdelta3.cpp  random_sampling.cpp
03_clustering/analyze/: Makefile  analyze_cluster.cpp
04_training/: Makefile  create_dataset.cpp  run.sh  train_hashlayer_gh.py
05_infer/: CMakeLists.txt  ann_inf_comp.cpp  build.sh  combined_inf_comp.cpp
