cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(custom_ops)
set(Torch_DIR ./libtorch/share/cmake/Torch)
find_package(Torch REQUIRED)
include_directories("NGT/lib")
link_directories("NGT/lib/NGT")
add_executable(DeepSketch ../util/xdelta3/xdelta3.c ../util/xxhash.c ../util/lz4.c ann_inf_comp.cpp)
SET( CMAKE_CXX_FLAGS "-O2 -Wno-literal-suffix")
SET( CMAKE_C_FLAGS "-O2")
target_link_libraries(DeepSketch "${TORCH_LIBRARIES}" pthread)
target_link_libraries(DeepSketch ngt pthread)
set_property(TARGET DeepSketch PROPERTY CXX_STANDARD 14)
